force-app/main/default/objects/User_Master__c/User_Master__c.object-meta.xml
<CustomObject>
    <description>List of user masters</description>
    <label>User Master</label>
    <nameField>
        <label>User Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>