force-app/main/default/objects/User_Master__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <defaultValue>&quot;@gmail.com&quot;</defaultValue>
    <description>Email of the User</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>