force-app/main/default/objects/User_Master__c/fields/Office_Mail__c.field-meta.xml
<CustomField>
    <fullName>Office_Mail__c</fullName>
    <label>Office Mail</label>
    <type>Email</type>
</CustomField>