force-app/main/default/objects/User_Master__c/fields/Paid__c.field-meta.xml
<CustomField>
    <fullName>Paid__c</fullName>
    <label>Paid</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>