force-app/main/default/objects/User_Master__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <defaultValue>&quot;+91-&quot;</defaultValue>
    <label>Phone Number</label>
    <length>14</length>
    <type>Text</type>
</CustomField>