force-app/main/default/objects/User_Master__c/fields/Received__c.field-meta.xml
<CustomField>
    <fullName>Received__c</fullName>
    <description>Cash Received on Payments.</description>
    <label>Received</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>