force-app/main/default/objects/User_Master__c/fields/To_Get__c.field-meta.xml
<CustomField>
    <fullName>To_Get__c</fullName>
    <label>To Get</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>