force-app/main/default/objects/User_Master__c/fields/Total_Amount_Shared__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Shared__c</fullName>
    <label>Total Amount Shared</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>