force-app/main/default/objects/User_Master__c/fields/Total_Expence__c.field-meta.xml
<CustomField>
    <fullName>Total_Expence__c</fullName>
    <label>Total Expence</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>