force-app/main/default/objects/User_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Expence__c</columns>
    <columns>Total_Amount_Spent__c</columns>
    <columns>To_Pay__c</columns>
    <columns>To_Get__c</columns>
    <columns>Paid__c</columns>
    <columns>Received__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>